--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
       <artifactId>mybatis</artifactId>
       <version>3.4.6</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>28.2-jre</version>
+    </dependency>
   </dependencies>
 
   <build>
